// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> snapshot should render the same 1`] = `
"Snapshot Diff:
 Compared values have no visual difference."
`;

exports[`<RadioGroup /> snapshot should render the same, with <RadioGroup.Button /> 1`] = `
"Snapshot Diff:
 - Expected
+ Received

  <div
    className=\\"FieldGroup-sc-18uoi37-0 RadioGroup__Group-sc-1l7wvp0-0 INvtC\\"
    role=\\"radiogroup\\"
  >
    <div
      className=\\"RadioButton__Wrapper-sc-1q7g63p-2 kkqoxF\\"
    >
      <label
        checked={false}
        className=\\"RadioButton-sc-1q7g63p-3 eKLvGD\\"
        disabled={false}
-       htmlFor=\\"radio-button-9\\"
+       htmlFor=\\"radio-button-12\\"
        size=\\"medium\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 jQXIpd\\"
          disabled={false}
-         id=\\"radio-button-9\\"
+         id=\\"radio-button-12\\"
          name=\\"foo\\"
          onChange={[Function onChange]}
          type=\\"radio\\"
          value=\\"Foo\\"
        />
        Foo
      </label>
    </div>
    <div
      className=\\"RadioButton__Wrapper-sc-1q7g63p-2 kkqoxF\\"
    >
      <label
        checked={false}
        className=\\"RadioButton-sc-1q7g63p-3 eKLvGD\\"
        disabled={false}
-       htmlFor=\\"radio-button-10\\"
+       htmlFor=\\"radio-button-13\\"
        size=\\"medium\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 jQXIpd\\"
          disabled={false}
-         id=\\"radio-button-10\\"
+         id=\\"radio-button-13\\"
          name=\\"foo\\"
          onChange={[Function onChange]}
          type=\\"radio\\"
          value=\\"Bar\\"
        />
        Bar
      </label>
    </div>
    <div
      className=\\"RadioButton__Wrapper-sc-1q7g63p-2 kkqoxF\\"
    >
      <label
        checked={false}
        className=\\"RadioButton-sc-1q7g63p-3 eKLvGD\\"
        disabled={false}
-       htmlFor=\\"radio-button-11\\"
+       htmlFor=\\"radio-button-14\\"
        size=\\"medium\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 jQXIpd\\"
          disabled={false}
-         id=\\"radio-button-11\\"
+         id=\\"radio-button-14\\"
          name=\\"foo\\"
          onChange={[Function onChange]}
          type=\\"radio\\"
          value=\\"Baz\\"
        />
        Baz
      </label>
    </div>
  </div>"
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Button /> 1`] = `
.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
  role="radiogroup"
>
  <div
    className=""
  >
    <label
      checked={false}
      className="c1"
      disabled={false}
      htmlFor="radio-button-3"
      size="medium"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id="radio-button-3"
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c1"
      disabled={false}
      htmlFor="radio-button-4"
      size="medium"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id="radio-button-4"
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c1"
      disabled={false}
      htmlFor="radio-button-5"
      size="medium"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id="radio-button-5"
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Button /> inline 1`] = `
.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 {
  display: inline-block;
  margin-right: 16px;
  vertical-align: top;
}

.c1:last-child {
  margin-right: 0;
}

.c1 .RadioButton__LockIcon-sc-1q7g63p-0 {
  font-size: 16px;
  margin-left: 8px;
}

.c2 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
  role="radiogroup"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="radio-button-6"
      size="medium"
    >
      <input
        checked={false}
        className="c3"
        disabled={false}
        id="radio-button-6"
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="radio-button-7"
      size="medium"
    >
      <input
        checked={false}
        className="c3"
        disabled={false}
        id="radio-button-7"
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="radio-button-8"
      size="medium"
    >
      <input
        checked={false}
        className="c3"
        disabled={false}
        id="radio-button-8"
        name="groceries"
        onChange={[Function]}
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with <RadioGroup.Radio /> 1`] = `
.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c5 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: 24px;
  position: relative;
  top: 6px;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  margin-right: 8px;
}

.c5:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 60%;
  left: 20%;
  position: absolute;
  top: 20%;
  width: 60%;
  background-color: #1250C4;
}

.c1 {
  display: block;
  margin-bottom: 5px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .c2:checked ~ .c4 {
  border-color: #1250C4;
}

.c1 .c2:checked ~ .c4:after {
  background-color: #1250C4;
  display: block;
}

.c1 .c2:focus ~ .c4 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1:hover .c4,
.c1:focus .c4 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1 .c2:checked:disabled ~ .c4 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
  role="radiogroup"
>
  <label
    className="Label-sc-1ny5bqy-0 c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="groceries"
      onChange={[Function]}
      size="medium"
      type="radio"
      value="Foo"
    />
    <span
      className="c4 c5"
    />
    Foo
  </label>
  <label
    className="Label-sc-1ny5bqy-0 c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="groceries"
      onChange={[Function]}
      size="medium"
      type="radio"
      value="Bar"
    />
    <span
      className="c4 c5"
    />
    Bar
  </label>
  <label
    className="Label-sc-1ny5bqy-0 c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="groceries"
      onChange={[Function]}
      size="medium"
      type="radio"
      value="Baz"
    />
    <span
      className="c4 c5"
    />
    Baz
  </label>
</div>
`;

exports[`<RadioGroup /> snapshot simple with button options 1`] = `
.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 {
  margin-bottom: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
  role="radiogroup"
>
  <div
    className=""
  >
    <label
      checked={false}
      className="c1"
      disabled={false}
      htmlFor="radio-button-0"
      size="medium"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id="radio-button-0"
        name="foo"
        onChange={[Function]}
        type="radio"
        value="Foo"
      />
      Foo
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c1"
      disabled={false}
      htmlFor="radio-button-1"
      size="medium"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id="radio-button-1"
        name="foo"
        onChange={[Function]}
        type="radio"
        value="Bar"
      />
      Bar
    </label>
  </div>
  <div
    className=""
  >
    <label
      checked={false}
      className="c1"
      disabled={false}
      htmlFor="radio-button-2"
      size="medium"
    >
      <input
        checked={false}
        className="c2"
        disabled={false}
        id="radio-button-2"
        name="foo"
        onChange={[Function]}
        type="radio"
        value="Baz"
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> snapshot simple with options 1`] = `
.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c5 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: 24px;
  position: relative;
  top: 6px;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  margin-right: 8px;
}

.c5:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 60%;
  left: 20%;
  position: absolute;
  top: 20%;
  width: 60%;
  background-color: #1250C4;
}

.c1 {
  display: block;
  margin-bottom: 5px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .c2:checked ~ .c4 {
  border-color: #1250C4;
}

.c1 .c2:checked ~ .c4:after {
  background-color: #1250C4;
  display: block;
}

.c1 .c2:focus ~ .c4 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1:hover .c4,
.c1:focus .c4 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1 .c2:checked:disabled ~ .c4 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
  role="radiogroup"
>
  <label
    className="Label-sc-1ny5bqy-0 c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="foo"
      onChange={[Function]}
      size="medium"
      type="radio"
      value="Foo"
    />
    <span
      className="c4 c5"
    />
    Foo
  </label>
  <label
    className="Label-sc-1ny5bqy-0 c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="foo"
      onChange={[Function]}
      size="medium"
      type="radio"
      value="Bar"
    />
    <span
      className="c4 c5"
    />
    Bar
  </label>
  <label
    className="Label-sc-1ny5bqy-0 c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="foo"
      onChange={[Function]}
      size="medium"
      type="radio"
      value="Baz"
    />
    <span
      className="c4 c5"
    />
    Baz
  </label>
</div>
`;

exports[`<RadioGroup /> snapshot with an error 1`] = `
.c6 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c5 {
  border-radius: 50%;
  box-sizing: border-box;
  display: inline-block;
  height: 24px;
  position: relative;
  top: 6px;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  margin-right: 8px;
}

.c5:after {
  border-radius: 50%;
  content: '';
  display: none;
  height: 60%;
  left: 20%;
  position: absolute;
  top: 20%;
  width: 60%;
  background-color: #1250C4;
}

.c1 {
  display: block;
  margin-bottom: 5px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 .c2:checked ~ .c4 {
  border-color: #1250C4;
}

.c1 .c2:checked ~ .c4:after {
  background-color: #1250C4;
  display: block;
}

.c1 .c2:focus ~ .c4 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1:hover .c4,
.c1:focus .c4 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c1 .c2:checked ~ .c4 {
  border-color: #e91b0c;
}

.c1 .c2:checked ~ .c4:after {
  background-color: #e91b0c;
  display: block;
}

.c1 .c2:focus ~ .c4 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c1 .c4 {
  border-color: #e91b0c;
}

.c1:hover .c4,
.c1:focus .c4 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c1 .c2:checked:disabled ~ .c4 {
  background-color: #999999;
  border-color: #999999;
  box-shadow: inset 0 0 0 3.5px #ffffff;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
  role="radiogroup"
>
  <label
    className="Label-sc-1ny5bqy-0 c1"
    disabled={false}
  >
    <input
      className="c2 c3"
      disabled={false}
      name="groceries"
      onChange={[Function]}
      size="medium"
      type="radio"
      value="Foo"
    />
    <span
      className="c4 c5"
    />
    Foo
  </label>
  <span
    className="c6"
  >
    Error text
  </span>
</div>
`;
